crates/ty_server/tests/e2e/snapshots/e2e__initialize__initialization.snap
---
source: crates/ty_server/tests/e2e/initialize.rs
expression: initialization_result
---
{
  "capabilities": {
    "positionEncoding": "utf-16",
    "textDocumentSync": {
      "openClose": true,
      "change": 2,
      "save": {
        "includeText": false
      }
    },
    "notebookDocumentSync": {
      "notebookSelector": [
        {
          "cells": [
            {
              "language": "python"
            }
          ]
        }
      ],
      "save": false
    },
    "completionProvider": {
      "triggerCharacters": [
        ".",
        "\"",
        "'",
        "{",
        "%",
        "|"
      ]
    },
    "hoverProvider": true,
    "signatureHelpProvider": {
      "triggerCharacters": [
        "(",
        ",",
        ":"
      ],
      "retriggerCharacters": [
        ")"
      ]
    },
    "declarationProvider": true,
    "definitionProvider": true,
    "typeDefinitionProvider": true,
    "implementationProvider": true,
    "referencesProvider": true,
    "documentHighlightProvider": true,
    "documentSymbolProvider": true,
    "codeActionProvider": {
      "codeActionKinds": [
        "quickfix",
        "refactor.inline.variable",
        "refactor.extract.variable",
        "refactor.extract.constant",
        "refactor.extract.function",
        "refactor.rewrite.returnAnnotation",
        "refactor.rewrite.toDataClass",
        "refactor.rewrite.fromDataClass"
      ],
      "resolveProvider": true
    },
    "codeLensProvider": {
      "resolveProvider": false
    },
    "workspaceSymbolProvider": true,
    "renameProvider": {
      "prepareProvider": true
    },
    "foldingRangeProvider": true,
    "selectionRangeProvider": true,
    "executeCommandProvider": {
      "commands": [
        "ty.printDebugInformation",
        "ty.runManageCommand",
        "ty.addDependency"
      ],
      "workDoneProgress": false
    },
    "callHierarchyProvider": true,
    "semanticTokensProvider": {
      "legend": {
        "tokenTypes": [
          "namespace",
          "class",
          "parameter",
          "selfParameter",
          "clsParameter",
          "variable",
          "property",
          "function",
          "method",
          "keyword",
          "string",
          "number",
          "decorator",
          "builtinConstant",
          "typeParameter",
          "comment",
          "operator",
          "regexp"
        ],
        "tokenModifiers": [
          "definition",
          "readonly",
          "async",
          "documentation",
          "defaultLibrary"
        ]
      },
      "range": true,
      "full": true
    },
    "typeHierarchyProvider": true,
    "inlayHintProvider": {},
    "diagnosticProvider": {
      "identifier": "ty",
      "interFileDependencies": true,
      "workspaceDiagnostics": true,
      "workDoneProgress": true
    },
    "workspace": {
      "workspaceFolders": {
        "supported": true,
        "changeNotifications": true
      },
      "fileOperations": {
        "willRename": {
          "filters": [
            {
              "scheme": "file",
              "pattern": {
                "glob": "**/*.{py,pyi,by,byi}",
                "matches": "file"
              }
            },
            {
              "scheme": "file",
              "pattern": {
                "glob": "**",
                "matches": "folder"
              }
            }
          ]
        }
      }
    }
  },
  "serverInfo": {
    "name": "ty",
    "version": "Unknown"
  }
}
